# mlops-assignment-e2e-ml-pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.airflow  REASEARCHER.md  REPORT.md  docker-compose.yaml  mini-swe-bench-single.sh  pyproject.toml  run-airflow-standalone.sh
dags/: evaluate_agent.py  evaluate_agent_docker.py
runs/airflow-real-2/: config.json  manifest.json  metrics.json  summary.json
runs/airflow-real-2/logs/run_evaluation/airflow-real-2/nebius__moonshotai__Kimi-K2.6/astropy__astropy-12907/: test_output.txt
runs/airflow-real-2/run-agent/trajectories/astropy__astropy-12907/: astropy__astropy-12907.traj.json
runs/docker-airflow-real-1/: config.json  manifest.json  metrics.json  summary.json
runs/docker-airflow-real-1/run-agent/trajectories/astropy__astropy-12907/: astropy__astropy-12907.traj.json
runs/docker-airflow-real-1/run-eval/logs/run_evaluation/docker-airflow-real-1/nebius__moonshotai__Kimi-K2.6/astropy__astropy-12907/: test_output.txt
runs/vm-real-pipeline-1/: config.json  manifest.json  metrics.json  summary.json
runs/vm-real-pipeline-1/logs/run_evaluation/vm-real-pipeline-1/nebius__moonshotai__Kimi-K2.6/astropy__astropy-12907/: test_output.txt
runs/vm-real-pipeline-1/run-agent/trajectories/astropy__astropy-12907/: astropy__astropy-12907.traj.json
scripts/: upload-run-to-s3.sh
src/mlops_assignment_e2e_ml_pipeline/: __init__.py  container_entrypoint.py  pipeline.py
src/mlops_assignment_e2e_ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
